--- a/admin/package.json
+++ b/admin/package.json
@@ -3,6 +3,9 @@
 	"dependencies": {
 		"jquery": "",
 		"liquicode_dev_common": "",
-		"liqui-logger": ""
+		"liqui-logger": "",
+		"command-line-args": "",
+		"command-line-usage": "",
+		"jsondiffpatch": ""
 	}
 }
